--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,6 @@ sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 sonar.test.exclusions=**/vendor/**,**/target/**
 
-sonar.junit.reportPaths=target/unit-tests/unit-tests.xml
+sonar.go.tests.reportPaths=target/unit-tests/tests.json
 sonar.go.coverage.reportPaths=target/unit-tests/coverage.out
 #sonar.go.gometalinter.reportPaths=target/static-analysis/static-analysis.log
