--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,11 @@
 sonar.projectKey=plugin-center-api
 
 sonar.sources=.
-sonar.exclusions=**/*_test.go,**/vendor/**,**/target/**
+sonar.exclusions=**/*_test.go,**/vendor/**
 
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
-sonar.test.exclusions=**/vendor/**,**/target/**
+sonar.test.exclusions=**/vendor/**
 
 sonar.go.tests.reportPaths=target/unit-tests/tests.json
 sonar.go.coverage.reportPaths=target/unit-tests/coverage.out
