Add missing static path to ingress

--- a/helm/plugin-center-api/values.yaml
+++ b/helm/plugin-center-api/values.yaml
@@ -26,6 +26,7 @@ ingress:
     - host: plugin-center-api.scm-manager.org
       paths:
         - /api
+        - /static
 
   tls:
     - secretName: plugin-center-api-tls-secret
