--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/target
+/website
 
 # Created by https://www.gitignore.io/api/go,linux,intellij
 # Edit at https://www.gitignore.io/?templates=go,linux,intellij
