update plugin sets

--- a/resources/test/plugin-sets/proper-plugin-sets/plug-and-play/description_en.yml
+++ b/resources/test/plugin-sets/proper-plugin-sets/plug-and-play/description_en.yml
@@ -1,4 +1,4 @@
-name: Plug'n Play
+name: Plug and Play
 features:
   - recommendations of SCM-Manager-developers
   - basic plugins for small to medium sized teams
