--- a/resources/test/plugin-sets/proper-plugin-sets/administration/description_en.yml
+++ b/resources/test/plugin-sets/proper-plugin-sets/administration/description_en.yml
@@ -2,4 +2,4 @@ name: Administration and Management
 features:
   - monitor your system effortlessly
   - configure precise authorizations
-  - connect securely to third-party systems
+  - connect securly to third-party systems
