--- a/resources/test/plugin-sets/proper-plugin-sets/plug-and-play/plugins.yml
+++ b/resources/test/plugin-sets/proper-plugin-sets/plug-and-play/plugins.yml
@@ -1,7 +1,13 @@
 id: plug-and-play
-versions: ">=2.0.0 <2.30.0"
-sequence: 2
+versions: ">=2.0.0"
+sequence: 4
 plugins:
-  - scm-auth-ldap-plugin
-  - scm-script-plugin
+  - scm-landingpage-plugin
   - scm-editor-plugin
+  - scm-content-search-plugin
+  - scm-support-plugin
+  - scm-review-plugin
+  - scm-repository-avatar-plugin
+  - scm-gravatar-plugin
+  - scm-repository-mirror-plugin
+  - scm-archive-plugin
