--- a/helm/plugin-center-api/values.yaml
+++ b/helm/plugin-center-api/values.yaml
@@ -20,8 +20,9 @@ service:
 ingress:
   enabled: true
   annotations:
-    kubernetes.io/ingress.class: traefik
+    kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
+    acme.cert-manager.io/http01-ingress-class: nginx
   hosts:
     - host: plugin-center-api.scm-manager.org
       paths:
